syntax = "proto3";

package proto;

option go_package = "Sec1/HandIn2";

message InitialAgreement {
  bytes P = 1; //Large prime
  bytes Q = 2; //large prime such that q % p-1 = 0
  int64 G = 3; //rand int with some restrictions
  bytes H = 4; //h = g^a % p
}

message Commitment {
  int64 DiceRoll = 1;
}

message CommitmentOpener {
  int64 Roll = 1;
  int64 RandInt = 2;
}

message Ack {
  bool IsAcknowledged = 1;
}

service RollingDieService {
  rpc SetupAgreements(InitialAgreement) returns (Ack);
  rpc SendCommitment(Commitment) returns (Ack);
  rpc OpenCommitment(CommitmentOpener) returns (Ack);
}

//protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     proto/proto-file.proto